# mini-postcode-lookup

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  cookiecutter.json  pyproject.toml  requirements.dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: auto_publish.yml  template_setup.yml  template_test.yml  test.yml
data/: 10000_postcodes.csv  onspd_100000.csv
demo/: mini_lookup.js
docs/: index.html  mini_lookup.js
hooks/: post_gen_project.py
script/: server
src/mini_postcode_lookup/: __init__.py  __main__.py  extra_values.py  generate.py  get_latest_onspd.py  process.py  util.py
src/mini_postcode_lookup/data/: local_authorities.json  pcon_2010.json
src/mini_postcode_lookup/data/lookups/: local_authorities_lookup.json
tests/: test_cookie.py  test_meta.py  test_mini_postcode_lookup.py
{{cookiecutter.hyphenated}}/: CHANGELOG.md  Dockerfile  LICENSE.md  README.md  pyproject.toml
{{cookiecutter.hyphenated}}/.devcontainer/: devcontainer.json
{{cookiecutter.hyphenated}}/src/{{cookiecutter.underscored}}/: __init__.py
{{cookiecutter.hyphenated}}/tests/: test_meta.py  test_{{cookiecutter.underscored}}.py
