[tool.poetry]
name = "mini-postcode-lookup"
version = "0.1.0"
description = "Approach for small lookup files for postcode geographies."
authors = ["mySociety <alex.parsons@mysociety.org>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mysociety/mini-postcode-lookup"
repository = "https://github.com/mysociety/mini-postcode-lookup"
include = [
    "LICENSE.md",
]

[tool.poetry.scripts]
mini-postcode-lookup = "mini_postcode_lookup.__main__:app"

[tool.poetry_bumpversion.file."src/mini_postcode_lookup/__init__.py"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
trogon = "^0.5.0"
tqdm = "^4.66.4"
pandas = "^2.2.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"
ruff = "^0.4.4"
pyright = "^1.1"
toml = "^0.10.2"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"